[gd_scene load_steps=4 format=3 uid="uid://dpsk2v0i8nxxg"]

[ext_resource type="Script" path="res://scripts/shop_dice.gd" id="1_abcde"]
[ext_resource type="PackedScene" uid="uid://c6gwenp8k2wsa" path="res://assets/models/4_faceless_dice_white.gltf" id="2_model"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(2, 2, 2)

[node name="ShopDice" type="RigidBody3D"]
script = ExtResource("1_abcde")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_1")

[node name="DiceModel" parent="." instance=ExtResource("2_model")]

[node name="Faces" type="Node3D" parent="."]

[node name="Face1" type="Sprite3D" parent="Faces"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.01, 0)
pixel_size = 0.005

[node name="Face2" type="Sprite3D" parent="Faces"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1.01, 0)
pixel_size = 0.005

[node name="Face3" type="Sprite3D" parent="Faces"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.01)
pixel_size = 0.005

[node name="Face4" type="Sprite3D" parent="Faces"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1.01)
pixel_size = 0.005

[node name="Face5" type="Sprite3D" parent="Faces"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.01, 0, 0)
pixel_size = 0.005

[node name="Face6" type="Sprite3D" parent="Faces"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.01, 0, 0)
pixel_size = 0.005